# limage_old

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main-checks.yml
crates/limage_core/src/: lib.rs
crates/shiterators/src/: lib.rs
limage_core/: Cargo.toml
limage_core/src/: lib.rs
shiterators/: Cargo.toml
shiterators/src/: lib.rs
src/: bezier.rs  core.rs  lib.rs  main.rs  patterns.rs  prelude.rs  shape_iterators.rs  shiterators.rs
src/core/: coords.rs  limage.rs
src/shiterators/: prelude.rs
