[package]
name = "limage_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
shiterators = { path = "../shiterators" }
imageproc = "0.23.0"
rusttype = "0.9.3"
pexels = "0.2.1"
serde_json = "1.0.94"
rand = "0.8.5"
reqwest ={ version = "0.11.15", features = ["blocking"]}